--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pyttsx3 = "^2.98"
 pyaudio = "^0.2.14"
 speechrecognition = "^3.11.0"
 botocore = "^1.35.47"
+google-generativeai = "^0.8.3"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.scripts]
 ash = "project_ash.app:start"
