Added offline llm when internet not there, gemini training in progress

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "project-ash"
+name = "project-nova"
 version = "0.1.1"
 description = "A personal assistant project"
-authors = ["Arghya Sarkar <arghyasarkar.nolan@gmail.com>", "Ankush Roy <>"]
+authors = ["Ankush Roy <ankushroy7926@gmail.com> Arghya Sarkar <arghyasarkar.nolan@gmail.com>"]
 readme = "README.md"
 package-mode = false
 
@@ -14,9 +14,10 @@ speechrecognition = "^3.11.0"
 botocore = "^1.35.47"
 google-generativeai = "^0.8.3"
 python-dotenv = "^1.0.1"
+ollama = "^0.3.3"
 
 [tool.poetry.scripts]
-ash = "project_ash.app:start"
+nova = "project_nova.app:start"
 
 [build-system]
 requires = ["poetry-core"]
