Music Module added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "project-ash"
+name = "friday"
 version = "0.1.1"
 description = "A personal assistant project"
 authors = ["Arghya Sarkar <arghyasarkar.nolan@gmail.com>", "Ankush Roy <>"]
@@ -11,12 +11,14 @@ python = "^3.12"
 pyttsx3 = "^2.98"
 pyaudio = "^0.2.14"
 speechrecognition = "^3.11.0"
-botocore = "^1.35.47"
 google-generativeai = "^0.8.3"
-python-dotenv = "^1.0.1"
+spotipy = "^2.24.0"
+youtube-dl = "^2021.12.17"
+python-vlc = "^3.0.21203"
+yt-dlp = "^2024.10.22"
 
 [tool.poetry.scripts]
-ash = "project_ash.app:start"
+friday = "friday.app:start"
 
 [build-system]
 requires = ["poetry-core"]
