--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ spotipy = "^2.24.0"
 youtube-dl = "^2021.12.17"
 python-vlc = "^3.0.21203"
 yt-dlp = "^2024.10.22"
+gtts = "^2.5.3"
+googletrans = "3.1.0a0"
 
 [tool.poetry.scripts]
 friday = "friday.app:start"
